issue 822: Dr. Syscall DR Extension, part 17: handle leak client
+ Implemented handle leak checking using drsys
+ Added drsys_cur_syscall_type() to drsys
+ For non-special memarg, report stored as full type not containing
+ Updated nudge test output for new return types from i#822 part 15
+ Walk memargs for handle leak even if no shadowing

Re-enabled use of drsyscall library in drmem now that
all of the Dr. Memory uses are fully supported.
This commit removes drmemory/syscall* all of the
code that is now in drsyscall.
It also updates drmemory/, common/, and drheapstat/ to use the drsys_*
interfaces.
It includes these diffs sent for review:

issue 822: Dr. Syscall DR Extension, part 2: client wingdi
issue 822: Dr. Syscall DR Extension, part 3: client windows
issue 822: Dr. Syscall DR Extension, part 4: client linux
issue 822: Dr. Syscall DR Extension, part 5: client cross-platform
issue 822: Dr. Syscall DR Extension, part 6: client non-syscall

SVN-Revision: 1134

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -339,6 +339,7 @@ function(newtest_nobuild_ex test exe test_ops drmem_ops dr_ops postprocess resba
     -D nudge:STRING=${nudge}
     -D VMKERNEL:BOOL=${VMKERNEL}
     -D USE_DRSYMS:BOOL=${USE_DRSYMS}
+    -D X64:BOOL=${X64}
     -D toolbindir:STRING=${DR_param_pattern}/../${TOOL_BIN}
     -D DRMEMORY_CTEST_SRC_DIR:STRING=${CMAKE_CURRENT_SOURCE_DIR}
     -D DRMEMORY_CTEST_DR_DIR:STRING=${DynamoRIO_DIR}
