--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1610,6 +1610,28 @@ else (UNIX)
   if (NSIS)
     message(STATUS "NSIS found: will build installer")
     set(CPACK_GENERATOR "ZIP;NSIS")
+    # Ensure we have the NSIS with an 8192 PATH limit (i#1029)
+    get_filename_component(nsis_path "${NSIS}" PATH)
+    if (NOT EXISTS "${nsis_path}/makensis.exe")
+      message(FATAL_ERROR "NSIS check needs to be updated")
+    endif ()
+    find_program(strings strings)
+    if (strings)
+      execute_process(COMMAND ${strings} "${nsis_path}/makensis.exe"
+        RESULT_VARIABLE strings_result
+        ERROR_QUIET
+        OUTPUT_VARIABLE strings_out)
+      if (strings_result)
+        message(FATAL_ERROR "*** ${strings} failed to run ***\n")
+      endif (strings_result)
+      # The default has "NSIS_MAX_STRLEN\n1024": make sure we have 8192.
+      string(REGEX MATCH "NSIS_MAX_STRLEN\n8192" big_limit "${strings_out}")
+      if (big_limit)
+        message(STATUS "NSIS has larger 8192 path limit")
+      else ()
+        message(FATAL_ERROR "Installed NSIS has a too-small path limit.  See i#1029.")
+      endif ()
+    endif (strings)
   else (NSIS)
     message(STATUS "NSIS not found: will not build installer")
     set(CPACK_GENERATOR "ZIP")
